<?xml version="1.0"?>
<package format="2">
  <name>jog_controller</name>
  <version>0.0.0</version>
  <description>The jog_controller package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai(TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/jog_controller</url> -->
  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>jog_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
