<?xml version="1.0"?>
<package format="2">
  <name>jog_controller</name>
  <version>0.0.2</version>
  <description>The jog_controller package</description>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai(TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/jog_controller</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>jog_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <build_depend>roslaunch</build_depend>
  <depend>rviz</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>spacenav_node</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
