<?xml version="1.0"?>
<package format="2">
  <name>jog_launch</name>
  <version>0.0.2</version>
  <description>Collection of the launch files for jog_controller</description>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/jog_launch</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fake_joint_launch</depend>
  <depend>jog_controller</depend>
  <depend>roslaunch</depend>
  <depend>rostest</depend>

  <!-- <exec_depend>ur3_moveit_config</exec_depend> -->
  <!-- <exec_depend>ur5_moveit_config</exec_depend> -->
  <!-- <exec_depend>tra1_moveit_config</exec_depend> -->
  <!-- <exec_depend>nextage_moveit_config</exec_depend> -->

  <export></export>
  
</package>
